# unsa

./: .gitignore
computacion-grafica/laboratorio/01 - dispay/: Makefile  main.cpp
computacion-grafica/laboratorio/09 - Modelado y Renderizado/: CMakeLists.txt  main.cpp
computacion-grafica/laboratorio/09 - Modelado y Renderizado/include/: scene_common.hpp  texture_loader.hpp
computacion-grafica/laboratorio/10 - Comportamiento Colectivo/: .gitignore  CMakeLists.txt  Makefile
computacion-grafica/laboratorio/10 - Comportamiento Colectivo/src/: main.cpp
computacion-grafica/laboratorio/10 - Comportamiento Colectivo/src/core/: Boid.cpp  Boid.hpp  Emulator.cpp  Emulator.hpp
computacion-grafica/laboratorio/10 - Comportamiento Colectivo/src/utils/: DeltaTime.cpp  DeltaTime.hpp
computacion-grafica/laboratorio/11 - Billboards Lluvia/: .gitignore  CMakeLists.txt  Makefile  conanfile.txt  mise.toml
computacion-grafica/laboratorio/11 - Billboards Lluvia/src/: main.cpp
computacion-grafica/laboratorio/11 - Billboards Lluvia/src/app/: AppConfig.hpp  RainApp.cpp  RainApp.hpp  RainScene.cpp  RainScene.hpp
computacion-grafica/laboratorio/11 - Billboards Lluvia/src/graphics/: ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp
computacion-grafica/laboratorio/11 - Billboards Lluvia/src/rain/: RainSystem.cpp  RainSystem.hpp
computacion-grafica/laboratorio/11 - Billboards Lluvia/src/rendering/: GroundRenderer.cpp  GroundRenderer.hpp  RainRenderer.cpp  RainRenderer.hpp
computacion-grafica/laboratorio/11 - Billboards Lluvia/src/scene/: OrbitCamera.cpp  OrbitCamera.hpp
computacion-grafica/laboratorio/11 - Billboards Lluvia/src/utils/: DeltaTime.cpp  DeltaTime.hpp  OpenGLInit.cpp  OpenGLInit.hpp
computacion-grafica/learn/: .gitignore  Makefile  hello-triangle-02.cpp  hello-window-01.cpp
computacion-grafica/proyectos/paint-opengl/: CMakeLists.txt  Makefile  imgui.ini
computacion-grafica/proyectos/paint-opengl/assets/shaders/: canvas.frag  canvas.vert  shape.frag  shape.vert
computacion-grafica/proyectos/paint-opengl/glad/include/glad/: glad.h
computacion-grafica/proyectos/paint-opengl/glad/src/: glad.c
computacion-grafica/proyectos/paint-opengl/include/: app.h  brush.h  canvas.h  line.h  polygon.h  renderer.h  shader.h  shape.h  toolbar.h
computacion-grafica/proyectos/paint-opengl/src/: app.cpp  brush.cpp  canvas.cpp  line.cpp  main.cpp  polygon.cpp  renderer.cpp  shader.cpp  toolbar.cpp
desarrollo-software-empresarial/: .gitignore
investigacion-ciencias-computacion/: .gitignore  Estructura_articulo.md  README.md  analisis_previo.md  pyproject.toml  resumen-papers-video-llm-vqa.md  translate_docling.py  translate_markdown.py
investigacion-ciencias-computacion/.atl/: skill-registry.md
investigacion-ciencias-computacion/docling/: Recurrent Attention-based Token Selection for Efficient Streaming Video-LLMs.md  STREAMING VIDEO QUESTION-ANSWERING WITH IN-CONTEXT VIDEO KV-CACHE RETRIEVAL.json  STREAMING VIDEO QUESTION-ANSWERING WITH IN-CONTEXT VIDEO KV-CACHE RETRIEVAL.md  STREAMING VIDEO UNDERSTANDING AND MULTIROUND INTERACTION WITH MEMORY-ENHANCED KNOWLEDGE.json  STREAMING VIDEO UNDERSTANDING AND MULTIROUND INTERACTION WITH MEMORY-ENHANCED KNOWLEDGE.md  StreamForest. Efficient Online Video Understanding with Persistent Event Memory.md  V-Rex. Real-Time Streaming Video LLM Acceleration via Dynamic KV Cache Retrieval.md  Video Question Answering via Gradually Refined Attention over Appearance and Motion.md  Video-ChatGPT. Towards Detailed Video Understanding via Large Vision and Language Models.md  Video-LLaVA. Learning United Visual Representation by Alignment Before Projection.md
investigacion-ciencias-computacion/pipelines/: 00-comparacion-pipelines-video-llm-streaming.md  01-rekv-in-context-video-kv-cache-retrieval.md  02-streamchat-memory-enhanced-knowledge.md  03-v-rex-dynamic-kv-cache-retrieval.md  04-rlivs-recurrent-attention-token-selection.md  05-streamforest-persistent-event-memory.md
investigacion-ciencias-computacion/resumenes/: Recurrent Attention-based Token Selection for Efficient Streaming Video-LLMs.json  Recurrent Attention-based Token Selection for Efficient Streaming Video-LLMs.md  STREAMING VIDEO QUESTION-ANSWERING WITH IN-CONTEXT VIDEO KV-CACHE RETRIEVAL.md  STREAMING VIDEO UNDERSTANDING AND MULTIROUND INTERACTION WITH MEMORY-ENHANCED KNOWLEDGE.md  StreamForest. Efficient Online Video Understanding with Persistent Event Memory.json  StreamForest. Efficient Online Video Understanding with Persistent Event Memory.md  V-Rex. Real-Time Streaming Video LLM Acceleration via Dynamic KV Cache Retrieval.json  (+5 more)
(+287 files in other folders)
